2006-05-05  Nigel Stephens  <nigel@mips.com>

	* gas/mips/noreorder.s, gas/mips/noreorder.d: New test for
	reorder/noreorder corner case.
	* gas/mips/mips.exp: Run new test.
	
2006-05-04  Kazu Hirata  <kazu@codesourcery.com>

	* gas/arm/armv1.d (error-output): New.
	* gas/arm/armv1.l: New.
	* gas/arm/thumb32.d (error-output): New.
	* gas/arm/thumb32.l: New.

2006-05-04  Thiemo Seufer  <ths@mips.com>
            Nigel Stephens  <nigel@mips.com>

	* gas/mips/mips.exp: Run mips32-dsp tests only for mips32r2.
	* gas/mips/set-arch.d: Adjust according to opcode table changes.

2006-05-03  Thiemo Seufer  <ths@mips.com>

	* gas/mips/mips32-mt.d: Fix mftr argument order.

2006-05-02  Joseph Myers  <joseph@codesourcery.com>

	* gas/arm/iwmmxt.s: Increase offsets for wstrb and wstrh.
	* gas/arm/iwmmxt.d: Update expected results.
	* gas/arm/iwmmxt-bad2.s: Test wstrb, wstrh, wldrb and wldrh.
	* gas/arm/iwmmxt-bad2.l: Update expected error messages.

2006-04-29  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/fp.d: New file.
	* gas/i386/fp.s: Likewise.

	* gas/i386/i386.exp: Run "fp".

2006-04-28  Thiemo Seufer  <ths@mips.com>
            David Ung  <davidu@mips.com>
	    Nigel Stephens  <nigel@mips.com>

	* gas/mips/cp0sel-names-mips32r2.d,
	gas/mips/cp0sel-names-mips64r2.d: Update for MT register names.

2006-04-26  Julian Brown  <julian@codesourcery.com>

	* gas/arm/neon-const.s: New testcase. Neon floating-point constants.
	* gas/arm/neon-const.d: Expected output of above.
	* gas/arm/neon-cov.d: Expect floating-point disassembly for VMOV.F32.

2006-04-26  Julian Brown  <julian@codesourcery.com>

	* gas/arm/neon-psyn.s: Basic test of programmers syntax.
	* gas/arm/neon-psyn.d: Expected output of above.

2006-04-26  Julian Brown  <julian@codesourcery.com>

	* gas/arm/copro.s: Avoid ldcl which encodes as a bad Neon instruction.
	* gas/arm/copro.d: Update accordingly.
	* gas/arm/neon-cond.s: New test. Conditional Neon opcodes in ARM mode.