@@ -33,24 +33,24 @@ Disassembly of section .text:
 0+05c <[^>]*> ecb00a01 	fldmias	r0!, {s0}
 0+060 <[^>]*> ed300a01 	fldmdbs	r0!, {s0}
 0+064 <[^>]*> ed300a01 	fldmdbs	r0!, {s0}
-0+068 <[^>]*> ec900b03 	vldmia	r0, {d0}
-0+06c <[^>]*> ec900b03 	vldmia	r0, {d0}
-0+070 <[^>]*> ecb00b03 	vldmia	r0!, {d0}
-0+074 <[^>]*> ecb00b03 	vldmia	r0!, {d0}
-0+078 <[^>]*> ed300b03 	vldmdb	r0!, {d0}
-0+07c <[^>]*> ed300b03 	vldmdb	r0!, {d0}
+0+068 <[^>]*> ec900b03 	fldmiax	r0, {d0}
+0+06c <[^>]*> ec900b03 	fldmiax	r0, {d0}
+0+070 <[^>]*> ecb00b03 	fldmiax	r0!, {d0}
+0+074 <[^>]*> ecb00b03 	fldmiax	r0!, {d0}
+0+078 <[^>]*> ed300b03 	fldmdbx	r0!, {d0}
+0+07c <[^>]*> ed300b03 	fldmdbx	r0!, {d0}
 0+080 <[^>]*> ec800a01 	fstmias	r0, {s0}
 0+084 <[^>]*> ec800a01 	fstmias	r0, {s0}
 0+088 <[^>]*> eca00a01 	fstmias	r0!, {s0}
 0+08c <[^>]*> eca00a01 	fstmias	r0!, {s0}
 0+090 <[^>]*> ed200a01 	fstmdbs	r0!, {s0}
 0+094 <[^>]*> ed200a01 	fstmdbs	r0!, {s0}
-0+098 <[^>]*> ec800b03 	vstmia	r0, {d0}
-0+09c <[^>]*> ec800b03 	vstmia	r0, {d0}
-0+0a0 <[^>]*> eca00b03 	vstmia	r0!, {d0}
-0+0a4 <[^>]*> eca00b03 	vstmia	r0!, {d0}
-0+0a8 <[^>]*> ed200b03 	vstmdb	r0!, {d0}
-0+0ac <[^>]*> ed200b03 	vstmdb	r0!, {d0}
+0+098 <[^>]*> ec800b03 	fstmiax	r0, {d0}
+0+09c <[^>]*> ec800b03 	fstmiax	r0, {d0}
+0+0a0 <[^>]*> eca00b03 	fstmiax	r0!, {d0}
+0+0a4 <[^>]*> eca00b03 	fstmiax	r0!, {d0}
+0+0a8 <[^>]*> ed200b03 	fstmdbx	r0!, {d0}
+0+0ac <[^>]*> ed200b03 	fstmdbx	r0!, {d0}
 0+0b0 <[^>]*> eeb80ac0 	fsitos	s0, s0
 0+0b4 <[^>]*> eeb80a40 	fuitos	s0, s0
 0+0b8 <[^>]*> eebd0a40 	ftosis	s0, s0
@@ -142,17 +142,17 @@ Disassembly of section .text:
 0+210 <[^>]*> ec90fa02 	fldmias	r0, {s30-s31}
 0+214 <[^>]*> ec910a01 	fldmias	r1, {s0}
 0+218 <[^>]*> ec9e0a01 	fldmias	lr, {s0}
-0+21c <[^>]*> ec801b03 	vstmia	r0, {d1}
-0+220 <[^>]*> ec802b03 	vstmia	r0, {d2}
-0+224 <[^>]*> ec80fb03 	vstmia	r0, {d15}
-0+228 <[^>]*> ec800b05 	vstmia	r0, {d0-d1}
-0+22c <[^>]*> ec800b07 	vstmia	r0, {d0-d2}
-0+230 <[^>]*> ec800b21 	vstmia	r0, {d0-d15}
-0+234 <[^>]*> ec801b1f 	vstmia	r0, {d1-d15}
-0+238 <[^>]*> ec802b1d 	vstmia	r0, {d2-d15}
-0+23c <[^>]*> ec80eb05 	vstmia	r0, {d14-d15}
-0+240 <[^>]*> ec810b03 	vstmia	r1, {d0}
-0+244 <[^>]*> ec8e0b03 	vstmia	lr, {d0}
+0+21c <[^>]*> ec801b03 	fstmiax	r0, {d1}
+0+220 <[^>]*> ec802b03 	fstmiax	r0, {d2}
+0+224 <[^>]*> ec80fb03 	fstmiax	r0, {d15}
+0+228 <[^>]*> ec800b05 	fstmiax	r0, {d0-d1}
+0+22c <[^>]*> ec800b07 	fstmiax	r0, {d0-d2}
+0+230 <[^>]*> ec800b21 	fstmiax	r0, {d0-d15}
+0+234 <[^>]*> ec801b1f 	fstmiax	r0, {d1-d15}
+0+238 <[^>]*> ec802b1d 	fstmiax	r0, {d2-d15}
+0+23c <[^>]*> ec80eb05 	fstmiax	r0, {d14-d15}
+0+240 <[^>]*> ec810b03 	fstmiax	r1, {d0}
+0+244 <[^>]*> ec8e0b03 	fstmiax	lr, {d0}
 0+248 <[^>]*> eeb50a40 	fcmpzs	s0
 0+24c <[^>]*> eef50a40 	fcmpzs	s1
 0+250 <[^>]*> eeb51a40 	fcmpzs	s2
@@ -211,24 +211,24 @@ Disassembly of section .text:
 0+324 <[^>]*> 0cf42a01 	fldmiaseq	r4!, {s5}
 0+328 <[^>]*> 0d352a01 	fldmdbseq	r5!, {s4}
 0+32c <[^>]*> 0d761a01 	fldmdbseq	r6!, {s3}
-0+330 <[^>]*> 0c971b03 	vldmiaeq	r7, {d1}
-0+334 <[^>]*> 0c982b03 	vldmiaeq	r8, {d2}
-0+338 <[^>]*> 0cb93b03 	vldmiaeq	r9!, {d3}
-0+33c <[^>]*> 0cba4b03 	vldmiaeq	sl!, {d4}
-0+340 <[^>]*> 0d3b5b03 	vldmdbeq	fp!, {d5}
-0+344 <[^>]*> 0d3c6b03 	vldmdbeq	ip!, {d6}
+0+330 <[^>]*> 0c971b03 	fldmiaxeq	r7, {d1}
+0+334 <[^>]*> 0c982b03 	fldmiaxeq	r8, {d2}
+0+338 <[^>]*> 0cb93b03 	fldmiaxeq	r9!, {d3}
+0+33c <[^>]*> 0cba4b03 	fldmiaxeq	sl!, {d4}
+0+340 <[^>]*> 0d3b5b03 	fldmdbxeq	fp!, {d5}
+0+344 <[^>]*> 0d3c6b03 	fldmdbxeq	ip!, {d6}
 0+348 <[^>]*> 0c8d1a01 	fstmiaseq	sp, {s2}
 0+34c <[^>]*> 0cce0a01 	fstmiaseq	lr, {s1}
 0+350 <[^>]*> 0ce1fa01 	fstmiaseq	r1!, {s31}
 0+354 <[^>]*> 0ca2fa01 	fstmiaseq	r2!, {s30}
 0+358 <[^>]*> 0d63ea01 	fstmdbseq	r3!, {s29}
 0+35c <[^>]*> 0d24ea01 	fstmdbseq	r4!, {s28}
-0+360 <[^>]*> 0c857b03 	vstmiaeq	r5, {d7}
-0+364 <[^>]*> 0c868b03 	vstmiaeq	r6, {d8}
-0+368 <[^>]*> 0ca79b03 	vstmiaeq	r7!, {d9}
-0+36c <[^>]*> 0ca8ab03 	vstmiaeq	r8!, {d10}
-0+370 <[^>]*> 0d29bb03 	vstmdbeq	r9!, {d11}
-0+374 <[^>]*> 0d2acb03 	vstmdbeq	sl!, {d12}
+0+360 <[^>]*> 0c857b03 	fstmiaxeq	r5, {d7}
+0+364 <[^>]*> 0c868b03 	fstmiaxeq	r6, {d8}
+0+368 <[^>]*> 0ca79b03 	fstmiaxeq	r7!, {d9}
+0+36c <[^>]*> 0ca8ab03 	fstmiaxeq	r8!, {d10}
+0+370 <[^>]*> 0d29bb03 	fstmdbxeq	r9!, {d11}
+0+374 <[^>]*> 0d2acb03 	fstmdbxeq	sl!, {d12}
 0+378 <[^>]*> 0ef8dac3 	fsitoseq	s27, s6
 0+37c <[^>]*> 0efdca62 	ftosiseq	s25, s5
 0+380 <[^>]*> 0efdbac2 	ftosizseq	s23, s4
